--- a/templates/index.html
+++ b/templates/index.html
@@ -8,11 +8,46 @@
         <!-- Item Entries Column -->
         <div class="col-12 mt-3 left">
             <div class="row">
-
+                {% for item in item_list%}
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <div class="image-container">
+                                {% if "placeholder" in item.image.url %}
+                                <img alt="hammer" class="card-img-top"
+                                    src="https://images.pexels.com/photos/209235/pexels-photo-209235.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1">
+                                {% else %}
+                                <img src=" {{ item.image.url }} " class="card-img-top">
+                                {% endif %}
+                                <h2 class="card-title">{{ item.name }}</h2>
+                                <hr />
+                                <p class="card-text text-muted h6">{{ item.timestamp }}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% if forloop.counter|divisibleby:5 %}
             </div>
+            <div class="row">
+                {% endif %}
+                {% endfor %}
+            </div>
+            
         </div>
     </div>
+    {% if is_paginated %}
+    <nav aria-label="Page navigation">
+        <ul class="pagination justify-content-center">
+            {% if page_obj.has_previous %}
+            <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
+            {% endif %}
+            {% if page_obj.has_next %}
+            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
 
+            {% endif %}
+        </ul>
+    </nav>
+    {% endif %}
 </div>
 
 {%endblock%}
