--- a/templates/folder.html
+++ b/templates/folder.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-
+{% block title %} Folder Page {% endblock %}
 {% block content %}
 
 <div class="container-fluid">
@@ -12,7 +12,7 @@
                 <div class="col-md-4">
                     <div class="card mb-4">
                         <div class="card-body">
-                            {{ folder.name }}
+                            <button>{{ folder.name }}</button>
                         </div>
                     </div>
                 </div>
