--- a/templates/items.html
+++ b/templates/items.html
@@ -3,31 +3,39 @@
 {% block content %}
 
 <div class="container-fluid">
-    <div class="row">
-
-        <!-- Item Entries Column -->
-        <div class="col-12 mt-3 left">
-            <div class="row">
-                {% for item in items %}
-                <div class="col-md-4">
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            {{ item.name }}
-                            {{ item.quantity }}
-                            {{ item.folder }}
-                        </div>
-                    </div>
-                </div>
-                {% if forloop.counter|divisibleby:5 %}
-            </div>
-            <div class="row">
-                {% endif %}
-                {% endfor %}
-            </div>
-            <a href="/add_item">Add an Item</a>
-            
-        </div>
+    <div>
+        <button type="button" class="btn btn-success"><a class="badge badge-success" href="/add_item">Add a new Item</a></button>
     </div>
+    <div class="col-md-8">
+        <table class="table bg-white table-striped">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Quantity</th>
+                    <th scope="col">Category</th>
+                    <th scope="col">Notes</th>
+                    <th scope="col">Update</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for item in items %}
+                <tr>
+                    <td>{{ item.name }}</td>
+                    <td>{{ item.quantity }}</td>
+                    <td>{{ item.category }}</td>
+                    <td>{{ item.notes }}</td>
+                    <td>
+                        <a class="btn btn-info btn-sm mr-2"
+                            href="#">Edit</a>
+                        <a class="btn btn-danger btn-sm ml-2"
+                            href="{% url 'item-delete' item.id %}">Delete</a>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+    
     {% if is_paginated %}
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
@@ -42,5 +50,15 @@
     </nav>
     {% endif %}
 </div>
+<script>
+    $(document).ready(function(){
+      $("#myInput").on("keyup", function() {
+        var value = $(this).val().toLowerCase();
+        $(".dropdown-menu li").filter(function() {
+          $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+        });
+      });
+    });
+</script>
 
 {% endblock %}
