--- a/templates/category.html
+++ b/templates/category.html
@@ -12,7 +12,11 @@
                 <div class="col-md-4">
                     <div class="card mb-4">
                         <div class="card-body">
-                            <button>{{ category.name }}</button>
+                            {{ category.name }}
+                            <a class="btn btn-info btn-sm mr-2"
+                                href="#">Edit</a>
+                            <a class="btn btn-danger btn-sm ml-2"
+                                href="{% url 'category-delete' category.id %}">Delete</a>
                         </div>
                     </div>
                 </div>
