--- a/templates/items.html
+++ b/templates/items.html
@@ -26,7 +26,7 @@
                     <td>{{ item.notes }}</td>
                     <td>
                         <a class="btn btn-info btn-sm mr-2"
-                            href="#">Edit</a>
+                            href="{% url 'item-edit' item.id %}">Edit</a>
                         <a class="btn btn-danger btn-sm ml-2"
                             href="{% url 'item-delete' item.id %}">Delete</a>
                     </td>
