--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
         <div class="col py-3">
             <div class="col-md-6 offset-md-3">
                 <div class="offset-md-4 col-lg-4 my-auto py-1 py-lg-0">
-                    <form method="GET" action="{% url 'items' %}">
+                    <form method="GET" action="{% url 'home' %}">
                         <div class="input-group m-3 w-100">
                             <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search for items">
                             <div class="input-group-append">
