--- a/templates/item_edit.html
+++ b/templates/item_edit.html
@@ -13,7 +13,7 @@
                 <form method="POST" action="">
                     {% csrf_token %}
                     {{ form|crispy }}
-                    <a class="btn btn-secondary" href="{% url 'items' %}">Cancel</a>
+                    <a class="btn btn-secondary" href="{% url 'home' %}">Cancel</a>
                     <input class="btn btn-info" type="submit" value="Save">
                 </form>
             </div>
