--- a/templates/index.html
+++ b/templates/index.html
@@ -5,115 +5,105 @@
 {% block content %}
 <div class="container-fluid">
     <div class="row flex-nowrap">
-        <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0">
-            <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 bg-menu min-vh-100">
-                <span class="fs-5 d-none d-sm-inline"><i class="fa-solid fa-bars"></i> Menu</span>
-                <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-sm-start" id="menu">
-                    <li class="nav-item">
-                        <a href="{% url 'home' %}" class="nav-link align-middle px-0">
-                            <i class="fa-solid fa-house"></i> <span class="ms-1 d-none d-sm-inline">Home</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
-                            <i class="fa-solid fa-layer-group"></i> <span class="ms-1 d-none d-sm-inline">Categories</span> </a>
-                        <ul class="collapse nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
-                            <li class="tbodyDiv">
-                                {% for category in category %}
-                                <div class="catDivs bg-submenu">
-                                    
-                                        
-                                    <a class="dropdown-item d-inline" href="#">{{ category.name }}</a>
-                                
-                                    <a class="btn btn-danger btn-sm float-end"
-                                    href="{% url 'category-delete' category.id %}">Delete</a>
-                                    <a class="btn btn-info btn-sm float-end"
-                                    href="{% url 'category-edit' category.id %}">Edit</a>
-                                </div>
-                                <hr>
-                                {% endfor %}
-                            </li>
-                            
-                            <li class="dropdown-item bg-submenu mt-3" href="#">
-                                <h5>Add new category</h5>
-                                <form method="POST">
-                                    {% csrf_token %}
-                                    {{ add_category|crispy }}
-                                    <div>
-                                        <p>
-                                            <button type="submit">Add Category</button>
-                                        </p>
+        <div class="d-flex flex-column col-auto col-md-3 col-xl-2 px-sm-2 px-0">
+            <div class="d-flex flex-column flex-grow-1 align-items-center align-items-sm-start px-3 pt-2 bg-menu min-vh-100">
+                <div class="sticky-top pt-3">
+                    <ul class="nav nav-pills flex-column h-100 mb-sm-auto mb-0 align-items-sm-start" id="menu">
+                        <li class="nav-item"><i class="fa-solid fa-bars"></i> <span class="fs-5 d-none d-sm-inline">Menu</span></li>
+                        <li class="nav-item">
+                            <a href="{% url 'home' %}" class="nav-link align-middle px-0">
+                                <i class="fa-solid fa-house"></i> <span class="ms-1 d-none d-sm-inline">Home</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+                                <i class="fa-solid fa-layer-group"></i> <span class="ms-1 d-none d-sm-inline">Categories</span> </a>
+                            <div>
+                                <div class="collapse nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
+                                    <h3 class="d-flex justify-content-center">Categories</h3>
+                                    <div class="tbodyDiv">
+                                        {% for category in category %}
+                                        <div class="catDivs bg-submenu d-flex justify-content-end">
+                                            <a class="link px-2" href="#">{{ category.name }}</a>
+                                            <a class="btn btn-info btn-sm me-0 d-flex align-items-center"
+                                            href="{% url 'category-edit' category.id %}">Edit</a>
+                                            <a class="btn btn-danger btn-sm me-0 d-flex align-items-center"
+                                            href="{% url 'category-delete' category.id %}">Delete</a>
+                                        </div>
+                                        <hr>
+                                        {% endfor %}
                                     </div>
-                                </form>
-                            </li>
-                        </ul>
-                        
-                    </li>
-                    
-                    <li>
-                        <a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
-                            <i class="fa-solid fa-square-plus"></i> <span class="ms-1 d-none d-sm-inline">Add Items</span></a>
+                                    <div class="bg-submenu mt-3 p-2">
+                                        <form method="POST">
+                                            <h5>Add new Category</h5>
+                                            {% csrf_token %}
+                                            {{ add_category|crispy }}
+                                            <div class="d-flex justify-content-center">
+                                                <button class="btn btn-info btn-sm" type="submit">Add Category</button>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+                                <i class="fa-solid fa-square-plus"></i> <span class="ms-1 d-none d-sm-inline">Add Items</span></a>
                             <div >
                                 <div class="collapse nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
                                     <form method="POST" class="bg-submenu p-2">
+                                        <h5>Add new Item</h5>
                                         {% csrf_token %}
                                         {{ add_item|crispy }}
-                                        <div>
-                                            <p>
-                                                <button type="submit">Add Item</button>
-                                            </p>
+                                        <div class="d-flex justify-content-center">
+                                            <button class="btn btn-info btn-sm" type="submit">Add Item</button>
                                         </div>
                                     </form>
                                 </div>
                             </div>
-                    </li>
-                </ul>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
-        <div class="col py-3">
-            <div class="col-md-6 offset-md-3">
-                <div class="offset-md-4 col-lg-4 my-auto py-1 py-lg-0">
-                    <form method="GET" action="{% url 'home' %}">
-                        <div class="input-group m-3 w-100">
-                            <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search for items">
-                            <div class="input-group-append">
-                                <button class="form-control btn btn-black border border-black rounded-0" type="submit">
-                                    <span class="icon">
-                                        <i class="fas fa-search"></i>
-                                    </span>
-                                </button>
-                            </div>
+        <div class="col">
+            <div>
+                <form class="searchBar" method="GET" action="{% url 'home' %}">
+                    <div class="input-group m-3">
+                        <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search for items">
+                        <div class="input-group-append btn-group">
+                            <button class="form-control btn btn-black border border-black rounded-0 " type="submit">
+                                <span class="icon">
+                                    <i class="fas fa-search"></i>
+                                </span>
+                            </button>
+                            <button class="form-control btn btn-black border border-black rounded-0 " type="submit">
+                                <span class="icon">
+                                    <i class="fa-solid fa-backward"></i>
+                                </span>
+                            </button>
                         </div>
-                    </form>
-                </div>
-                <div class="tbodyDiv">
-                    <table class="table table-bordered bg-white table-striped">
-                        <thead class="thead-dark sticky-top bg-dark text-white">
-                            <tr>
-                                <th scope="col">Name</th>
-                                <th scope="col">Quantity</th>
-                                <th scope="col">Category</th>
-                                <th scope="col">Notes</th>
-                                <th scope="col">Update</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for item in items %}
-                            <tr>
-                                <td>{{ item.name }}</td>
-                                <td>{{ item.quantity }}</td>
-                                <td>{{ item.category }}</td>
-                                <td>{{ item.notes }}</td>
-                                <td>
-                                    <a class="btn btn-info btn-sm mr-2"
-                                        href="{% url 'item-edit' item.id %}">Edit</a>
-                                    <a class="btn btn-danger btn-sm ml-2"
-                                        href="{% url 'item-delete' item.id %}">Delete</a>
-                                </td>
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
+                    </div>
+                </form>
+            </div>
+            <div class="col">
+                <div class="row">
+                    {% for item in items %}
+                    <div class=" itemDivs ">
+                        <h2 class="d-flex justify-content-center item-font">{{item.name}}</h2>
+                        <h6 class="d-flex justify-content-center item-font-p">Qty: {{item.quantity}}</h6>
+                        <h6 class="d-flex justify-content-center item-font-p"><i class="fa-regular fa-at"></i>: {{item.category}}</h6>
+                        <h6 class="d-flex justify-content-center item-font-p"><i class="fa-regular fa-pen-to-square"></i>: {{item.notes}}</h6>
+                        <p class="d-flex justify-content-center">
+                            <a class="btn btn-info btn-sm"
+                            href="{% url 'item-edit' item.id %}">Edit</a>
+                        </p>
+                        <p class="d-flex justify-content-center">
+                            <a class="btn btn-danger btn-sm "
+                            href="{% url 'item-delete' item.id %}">Delete</a>
+                        </p>
+                    </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
@@ -135,6 +125,8 @@
     </nav>
     {% endif %}
 </div>
+
+
 
 <script>
     $(document).ready(function(){
