--- a/templates/index.html
+++ b/templates/index.html
@@ -3,9 +3,12 @@
 {% block title %} Home Page {% endblock %}
 
 {% block content %}
-<div class="container-fluid">
-    <div class="row flex-nowrap">
-        <div class="d-flex flex-column col-auto col-md-3 col-xl-2 px-sm-2 px-0">
+<div class="container-fluid ">
+    
+                <!-- Sidebar menu-->
+
+    <div class="row flex-wrap">
+        <div class="d-flex flex-column col-auto col-md-3 col-xl-2 px-sm-2 px-0 w-auto">
             <div class="d-flex flex-column flex-grow-1 align-items-center align-items-sm-start px-3 pt-2 bg-menu min-vh-100">
                 <div class="sticky-top pt-3">
                     <ul class="nav nav-pills flex-column h-100 mb-sm-auto mb-0 align-items-sm-start" id="menu">
@@ -15,24 +18,19 @@
                                 <i class="fa-solid fa-house"></i> <span class="ms-1 d-none d-sm-inline">Home</span>
                             </a>
                         </li>
+                        
+                        <!-- Categories Entry -->
+
                         <li>
                             <a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
                                 <i class="fa-solid fa-layer-group"></i> <span class="ms-1 d-none d-sm-inline">Categories</span> </a>
                             <div>
                                 <div class="collapse nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
                                     <h3 class="d-flex justify-content-center">Categories</h3>
-                                    <div class="tbodyDiv">
-                                        {% for category in category %}
-                                        <div class="catDivs bg-submenu d-flex justify-content-end">
-                                            <a class="link px-2" href="#">{{ category.name }}</a>
-                                            <a class="btn btn-info btn-sm me-0 d-flex align-items-center"
-                                            href="{% url 'category-edit' category.id %}">Edit</a>
-                                            <a class="btn btn-danger btn-sm me-0 d-flex align-items-center"
-                                            href="{% url 'category-delete' category.id %}">Delete</a>
-                                        </div>
-                                        <hr>
-                                        {% endfor %}
-                                    </div>
+                                    {% if not categories %}
+                                    <h4>You have not created a category yet.</h4>
+                                    <h5>Create one now by using the form below</h5>
+
                                     <div class="bg-submenu mt-3 p-2">
                                         <form method="POST">
                                             <h5>Add new Category</h5>
@@ -43,90 +41,127 @@
                                             </div>
                                         </form>
                                     </div>
+                                    {% else %}
+                                        
+                                        <div class="catParentDiv">
+                                            {% for category in categories %}
+                                            <div class="catDivs bg-submenu d-flex justify-content-end">
+                                                <a class="link px-2 float-start" href="{% url 'home' %}?category={{category.name}}">{{ category.name }}</a>
+                                                <a class="btn btn-info btn-sm me-0 d-flex align-items-center"
+                                                href="{% url 'category-edit' category.id %}">Edit</a>
+                                                <a class="btn btn-danger btn-sm me-0 d-flex align-items-center"
+                                                href="{% url 'category-delete' category.id %}">Delete</a>
+                                            </div>
+                                            <hr>
+                                            {% endfor %}
+                                        </div>
+                                        
+                                        <div class="bg-submenu mt-3 p-2">
+                                            <form method="POST">
+                                                <h5>Add new Category</h5>
+                                                {% csrf_token %}
+                                                {{ add_category|crispy }}
+                                                <div class="d-flex justify-content-center">
+                                                    <button class="btn btn-info btn-sm" type="submit">Add Category</button>
+                                                </div>
+                                            </form>
+                                        </div>
+                                    {% endif %}
                                 </div>
                             </div>
                         </li>
+                        
+                        <!-- Item Form -->
+
                         <li>
                             <a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
                                 <i class="fa-solid fa-square-plus"></i> <span class="ms-1 d-none d-sm-inline">Add Items</span></a>
-                            <div >
-                                <div class="collapse nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
-                                    <form method="POST" class="bg-submenu p-2">
-                                        <h5>Add new Item</h5>
-                                        {% csrf_token %}
-                                        {{ add_item|crispy }}
-                                        <div class="d-flex justify-content-center">
-                                            <button class="btn btn-info btn-sm" type="submit">Add Item</button>
-                                        </div>
-                                    </form>
-                                </div>
+                            
+                            <div class="collapse nav flex-column ms-1 itemForm" id="submenu2" data-bs-parent="#menu">
+                                <form method="POST" class="bg-submenu p-2">
+                                    <h5>Add new Item</h5>
+                                    {% csrf_token %}
+                                    <input name="add_item" type="hidden" value="add_item">
+                                    {{ add_item.name | as_crispy_field }}
+                                    {{ add_item.quantity | as_crispy_field }}
+                                    <select name="category" required>
+                                        {% for category in categories %}
+                                        <option value="{{ category.name }}">{{ category.name }}</option>
+                                        {% endfor %}
+                                    </select>
+                                    {{ add_item.notes | as_crispy_field }}
+                                    <div class="d-flex justify-content-center">
+                                        <button class="btn btn-info btn-sm" type="submit">Add Item</button>
+                                    </div>
+                                </form>
                             </div>
+                            
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
-        <div class="col">
-            <div>
-                <form class="searchBar" method="GET" action="{% url 'home' %}">
-                    <div class="input-group m-3">
-                        <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search for items">
-                        <div class="input-group-append btn-group">
-                            <button class="form-control btn btn-black border border-black rounded-0 " type="submit">
-                                <span class="icon">
-                                    <i class="fas fa-search"></i>
-                                </span>
-                            </button>
-                            <button class="form-control btn btn-black border border-black rounded-0 " type="submit">
-                                <span class="icon">
-                                    <i class="fa-solid fa-backward"></i>
-                                </span>
-                            </button>
+        <div class="col main-bg">
+            
+            <!-- Welcome page -->
+
+            {% if not items %}
+            <div class="col-12">
+                <h1 class="d-flex justify-content-center">Welcome to your Inventory</h1>
+                <h2 class="d-flex justify-content-center">This Website is designed to help you keep track of all of your items, wherever they are.</h2>
+                <h2 class="d-flex justify-content-center">To get started, create a category, eg. "Cupboard".</h2>
+                <h3 class="d-flex justify-content-center">There are currently no items in your inventory</h3>
+                <h4 class="d-flex justify-content-center">Click on the sidebar buttons to create a category <i class="fa-solid fa-layer-group"></i> and then add items <i class="fa-solid fa-square-plus"></i> to it.</h4>
+            {% else %}
+                <div>
+                    <form class="searchBar" method="GET" action="{% url 'home' %}">
+                        <div class="input-group m-3 light-bg">
+                            <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search for items">
+                            <div class="input-group-append btn-group">
+                                <button class="form-control btn btn-black border border-black rounded-0 " type="submit">
+                                    <span class="icon">
+                                        <i class="fas fa-search"></i>
+                                    </span>
+                                </button>
+                                <button class="form-control btn btn-black border border-black rounded-0 " type="submit">
+                                    <span class="icon">
+                                        <i class="fa-solid fa-backward"></i>
+                                    </span>
+                                </button>
+                            </div>
                         </div>
-                    </div>
-                </form>
-            </div>
-            <div class="col">
-                <div class="row">
-                    {% for item in items %}
-                    <div class=" itemDivs ">
-                        <h2 class="d-flex justify-content-center item-font">{{item.name}}</h2>
-                        <h6 class="d-flex justify-content-center item-font-p">Qty: {{item.quantity}}</h6>
-                        <h6 class="d-flex justify-content-center item-font-p"><i class="fa-regular fa-at"></i>: {{item.category}}</h6>
-                        <h6 class="d-flex justify-content-center item-font-p"><i class="fa-regular fa-pen-to-square"></i>: {{item.notes}}</h6>
-                        <p class="d-flex justify-content-center">
-                            <a class="btn btn-info btn-sm"
-                            href="{% url 'item-edit' item.id %}">Edit</a>
-                        </p>
-                        <p class="d-flex justify-content-center">
-                            <a class="btn btn-danger btn-sm "
-                            href="{% url 'item-delete' item.id %}">Delete</a>
-                        </p>
-                    </div>
-                    {% endfor %}
+                    </form>
                 </div>
+
+                <!-- Items Entry -->
+
+                <div class="col">
+                    <div class="row">
+                        {% for item in items %}
+                        {% if item.category.user == request.user %}
+                            <div class="itemDivs light-bg">
+                                <h2 class="d-flex justify-content-center item-name">{{item.name}}</h2>
+                                <h6 class="d-flex justify-content-center item-p">Qty: {{item.quantity}}</h6>
+                                <h6 class="d-flex justify-content-center item-p"><i class="fa-regular fa-at"></i>: {{item.category}}</h6>
+                                <h6 class="d-flex justify-content-center item-p"><i class="fa-regular fa-pen-to-square"></i>: {{item.notes}}</h6>
+                                <p class="d-flex justify-content-center">
+                                    <a class="btn btn-info btn-sm"
+                                    href="{% url 'item-edit' item.id %}">Edit</a>
+                                </p>
+                                <p class="d-flex justify-content-center">
+                                    <a class="btn btn-danger btn-sm"
+                                    href="{% url 'item-delete' item.id %}">Delete</a>
+                                </p>
+                            </div>
+                        {% endif %}
+                        {% endfor %}
+                    </div>
+                </div>
+            {% endif %}
             </div>
         </div>
     </div>
 </div>
-
-    
-    {% if is_paginated %}
-    <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
-            {% if page_obj.has_previous %}
-            <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
-            {% endif %}
-            {% if page_obj.has_next %}
-            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
-
-            {% endif %}
-        </ul>
-    </nav>
-    {% endif %}
-</div>
-
-
 
 <script>
     $(document).ready(function(){
