--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-submenu">
+<nav class="navbar navbar-expand-lg navbar-light light-bg">
     <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'home' %}">Inventory <strong>{{ user.username }}</strong></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
@@ -8,9 +8,6 @@
         
         <div class="collapse navbar-collapse" id="navbarText">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
-                </li>
                 {% if user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'account_logout' %}" style="color: rgb(173, 16, 16);">Logout</a>
