Add form validation for duplicate categories

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,6 +36,14 @@
     <footer class="footer mt-auto py-3 dark-bg">
         <p class="m-0 text-center text-white">Made by STEddie</p>
     </footer>
+    <script>
+        let message_ele = document.getElementById("msg");
+
+        setTimeout(function(){ 
+        message_ele.style.display = "none"; 
+        }, 4000);
+
+    </script>
 </body>
 
 </html>
