--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,13 +53,13 @@ html {
 
 .link:hover,
 .link:active {
-    color: #445261;
-    text-decoration: underline;
+    color: black;
+    background-color: #dfdede;
 }
 
-.catParentDiv{
-    max-height: clamp(5em,40vh,50vh);
-    overflow: hidden;
+.catParentDiv {
+    max-height: clamp(5em,30vh,40vh);
+    overflow: auto;
     width: 18em;
 }
 
@@ -68,9 +68,18 @@ html {
     padding: .5em;
 }
 
+.catName {
+    margin-right: 1em;
+    border-radius: 20%;
+    border: 1px solid black;
+    background-color: #cfcfcf;
+    color: rgb(0, 0, 0);
+}
+
 .itemForm {
     width: 18em;
 }
+
 .itemDivs {
     border-radius: 10%;
     margin: 1em;
@@ -94,4 +103,19 @@ hr {
 
 .item-p {
     font-size: clamp(0.8rem, 2vw, 1.2rem);
+}
+
+.alert-error {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+}
+
+.msg-container {
+    align-items: center;
+    justify-content: center;
+}
+
+.alert {
+    padding: .5em;
 }
