--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
                                         <div class="catParentDiv">
                                             {% for category in categories %}
                                             <div class="catDivs bg-submenu d-flex justify-content-end">
-                                                <a class="link px-2 float-start" href="{% url 'home' %}?category={{category.name}}">{{ category.name }}</a>
+                                                <a class="link px-2 catName" href="{% url 'home' %}?category={{category.name}}">{{ category.name }}</a>
                                                 <a class="btn btn-info btn-sm me-0 d-flex align-items-center"
                                                 href="{% url 'category-edit' category.id %}">Edit</a>
                                                 <a class="btn btn-danger btn-sm me-0 d-flex align-items-center"
@@ -105,7 +105,7 @@
             
             <!-- Welcome page -->
 
-            {% if not items %}
+            {% if items.user == 0 %}
             <div class="col-12">
                 <h1 class="d-flex justify-content-center">Welcome to your Inventory</h1>
                 <h2 class="d-flex justify-content-center">This Website is designed to help you keep track of all of your items, wherever they are.</h2>
