--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,13 +1,17 @@
 <nav class="navbar navbar-expand-lg navbar-light light-bg">
     <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'home' %}">Inventory <strong>{{ user.username }}</strong></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        
-        <div class="collapse navbar-collapse" id="navbarText">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        {% if messages %}
+        {% for message in messages %}
+        <div class="msg-container">
+            <span id="msg" class="alert alert-{{ message.tags }}">
+                {{ message }}
+            </span>
+        </div>
+        {% endfor %}
+        {% endif %}
+        <div>
+            <ul class="navbar-nav ms-auto">
                 {% if user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'account_logout' %}" style="color: rgb(173, 16, 16);">Logout</a>
