--- a/templates/category_edit.html
+++ b/templates/category_edit.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% block title %} Edit Item {% endblock %}
+{% block title %} Edit Category {% endblock %}
 {% load crispy_forms_tags %}
 
 {% block content %}
@@ -10,7 +10,7 @@
                 <h3>Edit Category</h3>
                 <hr>
                 
-                <form method="POST" action="">
+                <form method="POST">
                     {% csrf_token %}
                     {{ form|crispy }}
                     <a class="btn btn-secondary" href="{% url 'home' %}">Cancel</a>
