--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,9 +1,6 @@
 html {
     scroll-behavior: smooth;
-}
-
-.thin {
-    font-weight: 300;
+    letter-spacing: 1px;
 }
 
 .bg-nav {
@@ -30,37 +27,34 @@ html {
     background-color: #dddddd;
 }
 
-.card {
-    border: none;
-    background-color: transparent;
+.text-red {
+    color: #721c24 !important;
+}
+
+.link:hover, 
+.link:active {
+    color: #117777 !important;
 }
 
 .btn-signup {
-    background-color: #23BBBB;
-    color: #fff;
+    color: #721c24 !important;
+    background-color: #dde01b;
+    border-radius: 10%;
 }
 
 .btn-signup:hover,
 .btn-signup:active {
-    background-color: #fff;
-    color: #23BBBB;
+    background-color: #721c24;
+    color: #dde01b !important;
 }
 
-.link {
-    color: black;
-    text-decoration: none;
-}
-
-.link:hover,
-.link:active {
-    color: black;
-    background-color: #dfdede;
+.category {
+    width: 18em;
 }
 
 .catParentDiv {
     max-height: clamp(5em,30vh,40vh);
     overflow: auto;
-    width: 18em;
 }
 
 .catDivs {
@@ -71,9 +65,13 @@ html {
 .catName {
     margin-right: 1em;
     border-radius: 20%;
-    border: 1px solid black;
-    background-color: #cfcfcf;
-    color: rgb(0, 0, 0);
+    background-color: #721c24;
+    color: #dde01b;
+    text-decoration: none;
+}
+.catName:hover {
+    color: #721c24;
+    background-color: #dde01b;
 }
 
 .itemForm {
@@ -83,26 +81,18 @@ html {
 .itemDivs {
     border-radius: 10%;
     margin: 1em;
-    width: 15em;
-    min-height: 15em;
+    min-width: 8em;
+    max-width: fit-content;
     max-height: fit-content;
+    box-shadow: 0 10px 20px #721c24;
 }
 
 .searchBar {
-    max-width: 300px;
+    max-width: 20em;
 }
 
 hr {
     margin: .3em;
-}
-
-.item-name {
-    font-size: clamp(1.6rem, 3vw, 2rem);
-    text-decoration: underline;
-}
-
-.item-p {
-    font-size: clamp(0.8rem, 2vw, 1.2rem);
 }
 
 .alert-error {
@@ -117,5 +107,13 @@ hr {
 }
 
 .alert {
+    padding: .5em;
+}
+
+.welcome {
+    background-color: #721c24;
+    color: #dde01b;
+    width: fit-content;
+    border-radius: 10%;
     padding: .5em;
 }
